domains 16-36: Groups 6-9 知识规划完成 (21域/36-48整体75%)
Groups 6-9 completed:
- Group 6 运行时核心: 16-24 (9域)
- Group 7 GC: 25-26 (2巨型域)
- Group 8 Native接口: 27-31 (5域)
- Group 9 可观测性: 32-36 (5域)

产出: knowledge-planning + outlines + completeness-questions